--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
 	},
 	"scripts": {
 		"tests": "vendor/bin/tester -s -p php -c tests/php.ini tests/Cases",
+		"coverage": "vendor/bin/tester -s -p phpdbg -C --coverage ./coverage.xml --coverage-src ./src tests/Cases",
 		"cs": "vendor/bin/phpcs --standard=tests/phpcs-ruleset.xml --extensions=php,phpt --tab-width=4 -sp src tests",
 		"csfix": "vendor/bin/phpcbf --standard=tests/phpcs-ruleset.xml --extensions=php,phpt --tab-width=4 -sp src tests",
 		"phpstan": "vendor/bin/phpstan analyse -c phpstan.neon src tests --level 7"
